--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
 
