--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5"
   }
 }
 
