--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "uuid": "^9.0.1",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "chrono-node": "^2.7.7"
   }
 }
 
