feat: add API routes, NLP execution endpoint, and manual API test script

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "uuid": "^9.0.1",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "chrono-node": "^2.7.7"
+    "chrono-node": "^2.7.7",
+    "supertest": "^6.3.3"
   }
 }
 
