--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "chrono-node": "^2.7.7",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
